[package]
name = "sparsetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = "*"
rand = "*"
rkyv = { version = "0.7", default-features = false, features = ["validation", "size_64", "std"] }
smallvec = "*"

[profile.release]
opt-level = 3
